Composer file update

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "akhil-ftxinfotech/custom-plugin",
     "description": "This is the custom plugin.",
     "keywords": ["wordpress", "plugin"],
-    "homepage": "https://github.com/akhil-ftxinfotech/custom-plugin.git",
+    "homepage": "https://github.com/akhil-ftxinfotech/custom-plugin",
     "authors": [
       {
         "name": "Ftx Infotech",
